--- a/src/components/mainPage/Starter.css
+++ b/src/components/mainPage/Starter.css
@@ -2,14 +2,8 @@
 	text-align: center;
 }
 
-.card-deck {
-	display: flex;
-	justify-content: space-evenly;
-}
-
 .card {
-	/* border: 2px solid black;
-	background-color: grey; */
+	display: inline-block;
 	width: 20rem;
 }
 
@@ -28,3 +22,15 @@
 .list-group-item {
 	margin: 0;
 }
+
+.spacing {
+	margin: 0rem auto;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+}
+
+/* .card-deck {
+	display: flex;
+	justify-content: space-evenly;
+} */
