styling update and load time improved

--- a/src/components/weatherWidget/Card.css
+++ b/src/components/weatherWidget/Card.css
@@ -28,6 +28,10 @@
 	padding-bottom: 2rem;
 }
 
+.titleSize:first-letter {
+	text-transform: capitalize;
+}
+
 @media (max-width: 1025px) {
 	.titleSize {
 		font-size: 4rem;
