--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,9 @@ body {
 
 @keyframes backgroundImg {
 	0% {
-		background: url(./img/valleyLandscape.jpg) no-repeat center center fixed;
+		background: url(./img/valleyLandscape.jpg) no-repeat center center fixed,
+			url(./img/blurRain.jpg), url(./img/foggyTrees.jpg),
+			url(./img/greenFog.jpg);
 		background-size: cover;
 	}
 	20% {
@@ -34,7 +36,7 @@ body {
 		background-size: cover;
 	}
 	100% {
-		background: url(./img/thunder.jpg) no-repeat center center fixed;
+		background: url(./img/valleyLandscape.jpg) no-repeat center center fixed;
 		background-size: cover;
 	}
 }
